# memerist

./: .gitignore  README.md  deb-build.sh  io.github.vani1_2.memerist.yml  memerist.spec  meson.build  org.gnome.Memerist.yml
.github/workflows/: build-deb.yml
data/: io.github.vani1_2.memerist.in  io.github.vani1_2.memerist.metainfo.xml.in  io.github.vani1_2.memeristt.metainfo.xml.in  meson.build  org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml  org.gnome.Example.metainfo.xml.in  org.gnome.Example.service.in
data/icons/: meson.build
deb-build/: memerist-amd64.deb
deb-build/memerist-amd64/DEBIAN/: control
po/: POTFILES.in
scripts/: dpkg-build.sh
src/: main.c  meson.build  myapp-application.c  myapp-window.c  myapp-window.ui  myapp.gresource.xml
