application_id = 'io.github.vani1_2.memerist'

scalable_dir = 'hicolor' / 'scalable' / 'apps'
install_data(
  scalable_dir / ('io.github.vani1_2.memerist.svg'),
  install_dir: get_option('datadir') / 'icons' / scalable_dir,
)

symbolic_dir = 'hicolor' / 'symbolic' / 'apps'
install_data(
  symbolic_dir / ('io.github.vani1_2.memerist-symbolic.svg'),
  install_dir: get_option('datadir') / 'icons' / symbolic_dir,
)
